fix(Geocoder): Align search end
IssueID #609

--- a/client/src/map/geocoder/geocoder.module.css
+++ b/client/src/map/geocoder/geocoder.module.css
@@ -1,3 +1,9 @@
+.geocoder {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .searchBox {
   position: relative;
   background-color: var(--color-secondary);
